--- a/device_message/templates/device_message.html
+++ b/device_message/templates/device_message.html
@@ -2,32 +2,52 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>organizations</title>
+        <title>device message</title>
     </head>
     <body>
-        <table>
-            <tbody>
-            <tr>
-              <th>Дата</th>
-              <th></th><th></th><th></th><th></th><th></th><th></th><th></th>
-              <th>Проход</th>
-              <th></th><th></th><th></th><th></th><th></th><th></th><th></th>
-              <th>Считыватель</th>
-              <th></th><th></th><th></th><th></th><th></th><th></th><th></th>              
-            </tr>
-            {% for message in messages %}
-                  <tr>
-                    <th>{{ message.date_f }}</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th>
-                    <th>{{ message.time_f }}</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th>
-                    <th>{{ message.readerID }}</th><th></th><th></th><th></th><th></th><th></th><th></th><th>
-                      
-                    </th>
-                  </tr>        
-              {% endfor %}
-             
-            </tbody>
-        </table>
-        
+      {% for index, row in organizations_departaments.iterrows %}
+
+          <p><b>{{row.oo_name}} {{'_'}} {{row.dd_name}}</b></p>
+          
+          {% for index1, row1 in persons_jobs.iterrows  %}
+              {% if row.oo_name == row1.oo_name and row.dd_name == row1.dd_name%}
+                 <p></p>
+                 {{row1.pp_sur_name}} {{' '}} {{row1.pp_name}} {{' '}}  {{row1.pp_patronymic}}  {{' '}} {{row1.jj_name}}
+
+
+                  <table>
+                      <tbody>  
+                      <tr>
+                        <th><small>Дата</small></th>
+                        <th></th><th></th><th></th><th></th><th></th><th></th><th></th>
+                        <th><small>Проход</small></th>
+                        <th></th><th></th><th></th><th></th><th></th><th></th><th></th>
+                        <th><small>Считыватель</small></th>
+                        <th></th><th></th><th></th><th></th><th></th><th></th><th></th>              
+                      </tr>
+
+                      {% for index2, row2 in devices_messages.iterrows %}
+                          {% if row.oo_name == row2.oo_name and row.dd_name == row2.dd_name and row1.pp_sur_name == row2.pp_sur_name and row1.pp_name == row2.pp_name and row1.pp_patronymic == row2.pp_patronymic and row1.jj_name == row2.jj_name%}
+                            <tr>
+                              <th><small><span style="font-weight:normal;">{{ row2.date_f }}</small></span></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th>
+                              <th><small><span style="font-weight:normal;">{{ row2.time_f }}</small></span></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th>
+                              <th><div align ="left"><small><span style="font-weight:normal;">{{ row2.readerID }}</small></span></small></div></th><th></th><th></th><th></th><th></th><th></th><th></th><th>
+                                
+                              </th>
+                            </tr> 
+                            
+                              
+                            
+                          {% endif %}        
+                        {% endfor %}
+                        
+                       
+                      </tbody>
+                  </table>
+              {% endif %}
+          {% endfor %}
+          
+      {% endfor %}
     </body>
 </html>
 
