--- a/device_message/templates/device_message_b.html
+++ b/device_message/templates/device_message_b.html
@@ -63,7 +63,7 @@
                         <thead style="background-color: #CDB5CD">  
                           <tr >
                             <th style = "text-align : center;font-size: 14px;">Дата</th>
-                            <th style = "text-align : center;font-size: 14px;">Проход</th>
+                            <th style = "text-align : center;font-size: 14px;">Время</th>
                             <th style = "text-align : center;font-size: 14px;">Считыватель</th>
                           </tr>
                         </thead>                     
